==> lovyan03/LovyanGFX/src/lgfx/v1/platforms/samd21/common.cpp <==
#include "common.hpp"
 #include <SPI.h>
 #include <Wire.h>

  void pinMode(int_fast16_t pin, pin_mode_t mode)
  {
    size_t port = pin >> samd21::PORT_SHIFT;
    if (port >= 2) return;

    pin &= samd21::PIN_MASK;
    uint32_t pinMask = (1ul << pin);

    switch (mode)
    {
    case pin_mode_t::input:
      PORT->Group[port].PINCFG[pin].reg = (uint8_t)(PORT_PINCFG_INEN) ;
      PORT->Group[port].DIRCLR.reg = pinMask ;
      break;

    case pin_mode_t::input_pulldown:
      PORT->Group[port].PINCFG[pin].reg=(uint8_t)(PORT_PINCFG_INEN|PORT_PINCFG_PULLEN) ;
      PORT->Group[port].DIRCLR.reg = pinMask ;
      PORT->Group[port].OUTCLR.reg = pinMask ;
      break;

    case pin_mode_t::input_pullup:
      PORT->Group[port].PINCFG[pin].reg=(uint8_t)(PORT_PINCFG_INEN|PORT_PINCFG_PULLEN) ;
      PORT->Group[port].DIRCLR.reg = pinMask ;
      PORT->Group[port].OUTSET.reg = pinMask ;
      break;

    case pin_mode_t::output:
      PORT->Group[port].PINCFG[pin].reg=(uint8_t)(PORT_PINCFG_INEN) ;
      PORT->Group[port].DIRSET.reg = pinMask ;
    }
  }

    cpp::result<void, error_t> init(int sercom_index, int pin_sclk, int pin_miso, int pin_mosi)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }

      int dipo = -1;
      int dopo = -1;

// Serial.printf("sercom:%d sclk:%d  mosi:%d  miso:%d \r\n", sercom_index, pin_sclk, pin_mosi, pin_miso);
      for (int alt = 0; alt < 2; ++alt)
      {
        int pad_sclk = getPadNumber(sercom_index, pin_sclk, alt);
        int pad_mosi = getPadNumber(sercom_index, pin_mosi, alt);
        dipo         = getPadNumber(sercom_index, pin_miso, alt);
        if (pad_sclk == 1)
        {
          if (     pad_mosi == 0) dopo = 0;
          else if (pad_mosi == 3) dopo = 2;
        }
        else if (pad_sclk == 3)
        {
          if (     pad_mosi == 0) dopo = 3;
          else if (pad_mosi == 2) dopo = 1;
        }
        if (dopo >= 0)
        {
// Serial.printf("pad sclk:%d / pad mosi:%d alt:%d\r\n", pad_sclk, pad_mosi, alt);
// Serial.printf("pad dipo:%d \r\n", dipo);
          pinAssignPeriph(pin_sclk, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
          pinAssignPeriph(pin_mosi, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
          if (dipo >= 0)
          {
            pinAssignPeriph(pin_miso, alt ? PIO_SERCOM_ALT : PIO_SERCOM);
          }
          break;
        }
      }
      if (dopo < 0) { return cpp::fail(error_t::invalid_arg); }
      if (dipo < 0) dipo = 0;

      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);

 //SPI.begin();
// void SPIClass::begin()
// {
  // void SPIClass::init()
  // {
  //   if (initialized)
  //     return;
  //   interruptMode = SPI_IMODE_NONE;
  //   interruptSave = 0;
  //   interruptMask = 0;
  //   initialized = true;
  // }
//   pinPeripheral(_uc_pinMiso, g_APinDescription[_uc_pinMiso].ulPinType);
//   pinPeripheral(_uc_pinSCK, g_APinDescription[_uc_pinSCK].ulPinType);
//   pinPeripheral(_uc_pinMosi, g_APinDescription[_uc_pinMosi].ulPinType);
  // void SPIClass::config(SPISettings settings)
  // {
  //   _p_sercom->disableSPI();
      /// spi disable
      while (sercom->SPI.SYNCBUSY.bit.ENABLE) {}
      sercom->SPI.CTRLA.bit.ENABLE = 0;
    // void SERCOM::initSPI(SercomSpiTXPad mosi, SercomRXPad miso, SercomSpiCharSize charSize, SercomDataOrder dataOrder)
    // {
    //   resetSPI();
      /// spi reset
      sercom->SPI.CTRLA.bit.SWRST = 1;
      while(sercom->SPI.CTRLA.bit.SWRST || sercom->SPI.SYNCBUSY.bit.SWRST);

    //   initClockNVIC();
      uint8_t   clockId = sercomData->clock;
      IRQn_Type IdNvic  = sercomData->irqn;

      // Setting NVIC
      NVIC_ClearPendingIRQ(IdNvic);
      NVIC_SetPriority(IdNvic, SERCOM_NVIC_PRIORITY);
      NVIC_EnableIRQ(IdNvic);

      // Setting clock
      GCLK->CLKCTRL.reg = GCLK_CLKCTRL_ID( clockId ) // Generic Clock 0 (SERCOMx)
                        | GCLK_CLKCTRL_GEN_GCLK0     // Generic Clock Generator 0 is source
                        | GCLK_CLKCTRL_CLKEN;

      while (GCLK->STATUS.reg & GCLK_STATUS_SYNCBUSY); // Wait for synchronization


      //Setting the CTRLA register
      sercom->SPI.CTRLA.reg = SERCOM_SPI_CTRLA_MODE_SPI_MASTER
                            | SERCOM_SPI_CTRLA_DOPO(dopo)
                            | SERCOM_SPI_CTRLA_DIPO(dipo)
                            | SercomDataOrder::MSB_FIRST << SERCOM_SPI_CTRLA_DORD_Pos;

      //Setting the CTRLB register
      sercom->SPI.CTRLB.reg = SERCOM_SPI_CTRLB_CHSIZE(SPI_CHAR_SIZE_8_BITS)
                            | SERCOM_SPI_CTRLB_RXEN; //Active the SPI receiver.

      while( sercom->SPI.SYNCBUSY.bit.CTRLB == 1 );
    // }
  //   _p_sercom->initSPIClock(settings.dataMode, settings.clockFreq);
  //   _p_sercom->enableSPI();
  // }
// }
      return {};
    }

    void release(int sercom_index)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);

      while (sercom->SPI.SYNCBUSY.bit.ENABLE) {}
      sercom->SPI.CTRLA.bit.ENABLE = 0;

      sercom->SPI.CTRLA.bit.SWRST = 1;
      while (sercom->SPI.CTRLA.bit.SWRST || sercom->SPI.SYNCBUSY.bit.SWRST);
    }

    void beginTransaction(int sercom_index, uint32_t freq, int spi_mode)
    {
      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);

      while (sercom->SPI.SYNCBUSY.bit.ENABLE) {}
      sercom->SPI.CTRLA.bit.ENABLE = 0;

      //Extract data from clockMode
      sercom->SPI.CTRLA.bit.CPHA = spi_mode & 1;
      sercom->SPI.CTRLA.bit.CPOL = spi_mode & 2;
      sercom->SPI.BAUD.reg = FreqToClockDiv(freq);

      sercom->SPI.CTRLA.bit.ENABLE = 1;
      while (sercom->SPI.SYNCBUSY.bit.ENABLE) {}
    }

    void endTransaction(int spi_host)
    {

    }

    void writeBytes(int spi_host, const uint8_t* data, size_t length)
    {

    }

    cpp::result<void, error_t> init(int sercom_index, int pin_sda, int pin_scl)
    {
      if ((size_t)sercom_index >= SERCOM_INST_NUM) { return cpp::fail(error_t::invalid_arg); }

      int pad_sda;
      int pad_scl;
      int alt = 0;
      do
      {
        pad_sda = getPadNumber(sercom_index, pin_sda, alt);
        pad_scl = getPadNumber(sercom_index, pin_scl, alt);
        if (pad_sda == 0 && pad_scl == 1) break;
      } while (++alt < 2);
      if (alt == 2) { return cpp::fail(error_t::invalid_arg); }

// Serial.printf("sercom:%d scl:%d  sda:%d \r\n", sercom_index, pin_scl, pin_sda);
// Serial.printf("pad scl:%d / pad sda:%d \r\n", pad_scl, pad_sda);

      auto sercomData = samd21::getSercomData(sercom_index);
      auto sercom = reinterpret_cast<Sercom*>(sercomData->sercomPtr);
      auto *i2cm = &sercom->I2CM;


      Wire.begin();
      return {};
    }

    cpp::result<void, error_t> release(int sercom_index)
    {
      Wire.end();
      return {};
    }

    cpp::result<void, error_t> beginTransaction(int sercom_index, int i2c_addr, uint32_t freq, bool read)
    {
      if (!read)
      {
        Wire.beginTransmission(i2c_addr);
      }
      Wire.setClock(freq);
      return {};
    }

    cpp::result<void, error_t> endTransaction(int sercom_index)
    {
      Wire.endTransmission();
      return {};
    }

    cpp::result<void, error_t> writeBytes(int sercom_index, const uint8_t *data, size_t length)
    {
      Wire.write(data, length);
      return {};
    }
